[gd_scene load_steps=5 format=3 uid="uid://smrf1msp4uhn"]

[ext_resource type="Script" uid="uid://c1yeinae8irt7" path="res://assets/arts_graphic/ui/debug_menu/mobility_detection.gd" id="1_cmbg2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fuyeg"]
bg_color = Color(0.501961, 0.501961, 0.501961, 0.470588)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[sub_resource type="SystemFont" id="SystemFont_h7gg0"]
generate_mipmaps = true
force_autohinter = true
subpixel_positioning = 0
msdf_size = 96

[sub_resource type="Theme" id="Theme_hhkhm"]
default_font = SubResource("SystemFont_h7gg0")
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 24
Label/styles/normal = SubResource("StyleBoxFlat_fuyeg")

[node name="MobilityDetection" type="CanvasLayer"]
script = ExtResource("1_cmbg2")

[node name="DebugMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
theme = SubResource("Theme_hhkhm")

[node name="MobilityDetection" type="VBoxContainer" parent="DebugMenu"]
layout_mode = 1
offset_right = 101.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_constants/separation = 0
script = ExtResource("1_cmbg2")

[node name="Graphs" type="VBoxContainer" parent="DebugMenu/MobilityDetection"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="SpeedGraph" type="HBoxContainer" parent="DebugMenu/MobilityDetection/Graphs"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Graph" type="Panel" parent="DebugMenu/MobilityDetection/Graphs/SpeedGraph"]
custom_minimum_size = Vector2(480, 192)
layout_mode = 2

[node name="Title" type="Label" parent="DebugMenu/MobilityDetection/Graphs/SpeedGraph"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Speed↓"

[node name="AccelerationGraph" type="HBoxContainer" parent="DebugMenu/MobilityDetection/Graphs"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Graph" type="Panel" parent="DebugMenu/MobilityDetection/Graphs/AccelerationGraph"]
custom_minimum_size = Vector2(480, 192)
layout_mode = 2

[node name="Title" type="Label" parent="DebugMenu/MobilityDetection/Graphs/AccelerationGraph"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Acceleration↓"

[node name="JumpingTime" type="Label" parent="DebugMenu/MobilityDetection/Graphs"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "JumpingTime:"

[node name="JumpingHeight" type="Label" parent="DebugMenu/MobilityDetection/Graphs"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "JumpingHeight:"
